--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <i class="icon-yt">▶️</i>
                 <h3>Youtube</h3>
                 <p>Assista aos nossos vídeos e pregações toda semana.</p>
-                <a href="#" class="cta-button">Acesse nosso canal</a>
+                <a href="https://youtube.com/@3ieqcvel625?si=MlmcOVMGukm-Qpf-" class="cta-button" target="_blank">Acesse nosso canal</a>
             </div>
             <div class="card">
                 <i class="icon-store">🛒</i>
@@ -111,11 +111,11 @@
     <div class="empresarios-grid">
         
         <div class="business-card">
-            <div class="business-logo" style="background-image: url('logo-empresa1.png');"></div>
-            <h3>Nome da Empresa 1</h3>
-            <p class="segmento">Segmento: Arquitetura e Design</p>
-            <p class="contato">Contato: (99) 99999-9999</p>
-            <a href="link-para-site-ou-insta" class="cta-button-small">Ver Perfil</a>
+            <div class="business-logo" style="background-image: url('logo_prado_vision.png');"></div>
+            <h3>Prado Vision</h3>
+            <p class="segmento">Segmento: Consultoria Tecnológica</p>
+            <p class="contato">Contato: (45) 9 9961-4886</p>
+            <a href="https://www.instagram.com/prado.vision?igsh=M3dzY2I4c2tubHJ6" class="cta-button-small" target="_blank">Ver Perfil</a>
         </div>
         
         <div class="business-card">
