--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
         
         <ul class="nav-links">
             <li><a href="#">É Novo Aqui?</a></li>
-            <li class="dropdown"><a href="#">Nossas Igrejas ▼</a>
-                <ul class="dropdown-menu"><li><a href="#">Volta Redonda</a></li><li><a href="#">Cidade B</a></li></ul>
+            <li class="dropdown"><a href="#">Nossas Células ▼</a>
+                <ul class="dropdown-menu"><li><a href="#">Rede Ebenézer 1</a></li><li><a href="#">Rede Ebenézer 2</a></li><li><a href="#">Rede Flecha no Alvo</a></li><li><a href="#">Rede Deus Conosco</a></li></ul>
             </li>
             <li class="dropdown"><a href="#">Conteúdo ▼</a>
                 <ul class="dropdown-menu"><li><a href="#">Séries</a></li><li><a href="#">Palavras</a></li></ul>
             </li>
             <li><a href="#">Agenda</a></li>
-            <li><a href="#">Faça Parte</a></li>
+            <li><a href="#">Encontre uma célula</a></li>
             <li><a href="#">Contato</a></li>
         </ul>
         
