--- a/index.html
+++ b/index.html
@@ -227,6 +227,27 @@
                 </div>
             </div>
         </div>
+                    <div class="footer-col developer-credits">
+                <h4>Desenvolvimento</h4>
+                
+                    <img src="logo_prado_vision.png" alt="Logo Prado Vision" class="dev-logo">
+                    <p class="dev-text">Leandro Prado</p> 
+                </a>
+
+                <div class="dev-social-icons">
+                    <a href="https://www.instagram.com/prado.vision?igsh=M3dzY2I4c2tubHJ6" target="_blank" aria-label="Instagram Prado Vision" class="dev-icon instagram">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    
+                    <a href="https://wa.me/45999614886" target="_blank" aria-label="WhatsApp Prado Vision" class="dev-icon whatsapp">
+                        <i class="fab fa-whatsapp"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>&copy; 2025 3ª Igreja do Evangelho Quadrangular. Todos os direitos reservados.</p>
+        </div>
     </footer>
 
     <script src="script.js"></script>
