--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
                         <p>📖 Tenha a Bíblia no seu bolso.</p>
                     </div>
                     <div class="app-links">
-                        <a href="https://play.google.com/store/apps/details?id=br.com.raise.app10693&pcampaignid=web_share"><img src="assets/imagens/google-play.png" alt="Google Play"></a>
-                        <a href="#"><img src="assets/imagens/app-store.png" alt="App Store"></a>
+                        <a href="https://play.google.com/store/apps/details?id=br.com.raise.app10693&pcampaignid=web_share" target="_blank"><img src="assets/imagens/google-play.png" alt="Google Play"></a>
+                        <a href="https://apps.apple.com/br/app/3-ieq-cascavel/id1597279130" target="_blank"><img src="assets/imagens/app-store.png" alt="App Store"></a>
                     </div>
                 </div>
                 <div class="app-mockup">
@@ -233,7 +233,9 @@
     <footer id="main-footer">
         <div class="footer-content">
             <div class="footer-logo">
+                <a href="index.html">
                 <img src="assets/logos/Logo_Quadrangular.png" alt="Logo da 3ª IEQ CVEL" class="footer-logo-img">
+                </a>
             </div>
             
             <div class="footer-links">
