--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
                     <a href="#">É Novo Aqui? ▼</a>
                     <ul class="dropdown-menu">
                         <li><a href="quem-somos.html">Quem Somos</a></li>
-                        <li><a href="nossos-cultos.html">Nossos Cultos</a></li>
                         <li><a href="nossos-pastores.html">Nossos Pastores</a></li>
-                        <li><a href="nossos-supervisores.html">Nossos Supervisores</a></li>
                         <li><a href="ensino.html">Ensino</a></li>
                     </ul>
                 </li>
@@ -43,9 +41,9 @@
                     <ul class="dropdown-menu"><li><a href="#">Rede Ebenézer 1</a></li><li><a href="#">Rede Ebenézer 2</a></li><li><a href="#">Rede Flecha no Alvo</a></li><li><a href="#">Rede Deus Conosco</a></li></ul>
                 </li>
                 <li class="dropdown"><a href="#">Conteúdo ▼</a>
-                    <ul class="dropdown-menu"><li><a href="#">Séries</a></li><li><a href="#">Palavras</a></li></ul>
+                    <ul class="dropdown-menu"><li><a href="#">Material</a></li><li><a href="index.html#palavra">Palavras</a></li></ul>
                 </li>
-                <li><a href="#">Agenda</a></li>
+                <li><a href="index.html#agenda">Agenda</a></li>
                 <li><a href="#">Faça Parte</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
@@ -144,11 +142,11 @@
                     <a href="https://www.instagram.com/prado.vision?igsh=M3dzY2I4c2tubHJ6" class="cta-button-small" target="_blank">Ver Perfil</a>
                 </div>
                 <div class="business-card">
-                    <div class="business-logo" style="background-image: url('assets/imagens/logo-empresa2.png');"></div>
-                    <h3>Padaria Sabor da Vida</h3>
-                    <p class="segmento">Segmento: Alimentos e Confeitaria</p>
-                    <p class="contato">Local: Rua das Flores, 123</p>
-                    <a href="link-para-site-ou-insta" class="cta-button-small">Ver Perfil</a>
+                    <div class="business-logo" style="background-image: url('assets/logos/logo_dinamus.jpg');"></div>
+                    <h3>Dinâmus</h3>
+                    <p class="segmento">Segmento: Chocolares artesanais</p>
+                    <p class="contato">Local: Rua Conceição Moreira Desprinda, 127</p>
+                    <a href="https://www.instagram.com/dinamus_explosaodedocura?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="cta-button-small" target="_blank">Ver Perfil</a>
                 </div>
                 <div class="business-card">
                     <div class="business-logo" style="background-image: url('assets/imagens/logo-empresa3.png');"></div>
@@ -258,8 +256,8 @@
                 <div class="app-text">
                     <h2>Baixe nosso aplicativo e tenha a igreja 24 horas com você.</h2>
                     <div class="app-features">
-                        <p>📺 Receba conteúdos exclusivos.</p>
-                        <p>📖 Tenha a Bíblia no seu bolso.</p>
+                        <p><i class="fas fa-check-square"></i> Receba conteúdos exclusivos.</p>
+                        <p><i class="fas fa-check-square"></i> Tenha a Bíblia no seu bolso.</p>
                     </div>
                     <div class="app-links">
                         <a href="https://play.google.com/store/apps/details?id=br.com.raise.app10693&pcampaignid=web_share" target="_blank"><img src="assets/imagens/google-play.png" alt="Google Play"></a>
