--- a/index.html
+++ b/index.html
@@ -284,14 +284,14 @@
                 <div class="link-column">
                     <h4>Navegação</h4>
                     <a href="#">Notícias</a>
-                    <a href="#">Planos de leitura</a>
-                    <a href="#">Downloads</a>
+                    <a href="planos-de-leitura.html">Planos de leitura</a>
+                    <a href="downloads.html">Downloads</a>
                 </div>
                 <div class="link-column">
                     <h4>Conecte-se</h4>
-                    <a href="#">Pedidos de oração</a>
-                    <a href="#">Fale conosco</a>
-                    <a href="#">Onde nos encontrar</a>
+                    <a href="pedidos-de-oracao.html">Pedidos de oração</a>
+                    <a href="https://wa.me/5545999803788" target="_blank">Fale conosco</a>
+                    <a href="https://maps.app.goo.gl/YUsNHuhLa1bmDrJb9" target="_blank">Onde nos encontrar</a>
                 </div>
             </div>
             
@@ -299,10 +299,6 @@
                 <h4>Sua Localização</h4>
                 <p>📍 Rua Guaíba, 149 - Bairro Periolo, Cascavel/PR - Brasil</p>
                 <p>📞 +55 (45) 9 9980-3788</p>
-                <div class="footer-legal">
-                    <a href="#">Termos de Uso</a>
-                    <a href="#">Política de Cookies</a>
-                </div>
             </div>
 
             <div class="footer-col developer-credits">
