--- a/nossos-pastores.html
+++ b/nossos-pastores.html
@@ -197,7 +197,7 @@
             </div>
             
             <div class="footer-contato">
-                <h4>Sua Localização</h4>
+                <h4>Nossa Localização</h4>
                 <p>📍 Rua Guaíba, 149 - Bairro Periolo, Cascavel/PR - Brasil</p>
                 <p>📞 +55 (45) 9 9980-3788</p>
             </div>
