--- a/planos-de-leitura.html
+++ b/planos-de-leitura.html
@@ -78,8 +78,8 @@
                         <i class="fas fa-cross"></i> 
                     </div>
                     <div class="plan-text-content">
-                        <h3>Novo Testamento (90 Dias)</h3>
-                        <p>Foque nos evangelhos e nas cartas dos apóstolos em uma jornada intensa de 3 meses.</p>
+                        <h3>EM PRODUÇÃO</h3>
+                        <p>Conteúdo em produção.</p>
                     </div>
                     <a href="assets/downloads/plano_novo_testamento.pdf" download class="cta-button-small">
                         <i class="fas fa-download"></i> Baixar PDF
@@ -91,8 +91,8 @@
                         <i class="fas fa-heart"></i> 
                     </div>
                     <div class="plan-text-content">
-                        <h3>Plano do Amor e Perdão</h3>
-                        <p>Estudo focado em passagens bíblicas sobre o amor de Deus, a graça e o perdão.</p>
+                        <h3>EM PRODUÇÃO</h3>
+                        <p>Conteúdo em produção.</p>
                     </div>
                     <a href="assets/downloads/plano_amor_e_perdao.pdf" download class="cta-button-small">
                         <i class="fas fa-download"></i> Baixar PDF
